packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_error_snapshots/unexpected_pkgname_property.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n\npkgname = test\n\t# validpgpkeys is not valid in the context of pkgname\n\tvalidpgpkeys = 4A0C4DFFC02E1A7ED969ED231C2358A25A10D94E\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 7, column 2
  |
7 |  validpgpkeys = 4A0C4DFFC02E1A7ED969ED231C2358A25A10D94E
  |  ^
invalid package property type
expected one of the allowed package section properties:, `depends`, `optdepends`, `provides`, `conflicts`, `replaces`, `pkgdesc`, `url`, `license`, `arch`, `changelog`, `install`, `groups`, `options`, `backup`
